SERVER-49469 Fix union inner pipeline explain

(cherry picked from commit 274192ab7d429710e0f69f0b1d922005fca9d516)