src/mongo/db/pipeline/process_interface/stub_mongo_process_interface.h
@@ -154,8 +154,8 @@ public:
         MONGO_UNREACHABLE;
     }
 
-    BSONObj attachCursorSourceAndExplain(Pipeline* ownedPipeline,
-                                         ExplainOptions::Verbosity verbosity) override {
+    BSONObj preparePipelineAndExplain(Pipeline* ownedPipeline,
+                                      ExplainOptions::Verbosity verbosity) override {
         MONGO_UNREACHABLE;
     }
 
